# friendly

./: .gitignore  CONTRIBUTING.md  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f384d52f5907_initial_migration.py
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routers/: auth.py  home.py
backend/app/api/v1/routes/: auth.py  user.py
backend/app/api/v1/schemas/: user.py
backend/app/core/: constants.py  db.py  dependencies.py  environment_variables.py  jwt.py  logger.py
backend/app/core/impl/: user_repository.py
backend/app/core/meta/: user_repository_meta.py
backend/app/dependencies/: auth.py
backend/app/models/: dislikes_association_table.py  interests_association_table.py  likes_association_table.py  matches_association_table.py  refresh_token.py  user.py
backend/app/routers/: auth.py  home.py  user.py
backend/app/schemas/: auth.py  user.py
backend/app/service/: auth_service.py
backend/app/service/impl/: user_service.py
backend/app/service/meta/: user_service_meta.py
backend/app/services/: auth_service.py
backend/app/services/impl/: user_service.py
backend/app/services/meta/: user_service_meta.py
backend/migrations/: env.py
backend/tests/: conftest.py
backend/tests/unit/: test_auth.py
frontend/: .env.example  .gitignore  .prettierrc  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/app/: app.tsx  entry-point.tsx  index.tsx  router.tsx  setup.ts
frontend/src/app/layouts/: root-layout.tsx
frontend/src/app/providers/: auth-provider.tsx  index.ts  index.tsx  store-provider.tsx  style-provider.tsx  telegram-provider.tsx
frontend/src/app/router/: router-provider.tsx  router.tsx
frontend/src/app/styles/: fonts.scss  global.scss
frontend/src/features/auth/: api.ts
frontend/src/pages/profile/: index.ts
frontend/src/pages/welcome/: index.ts
frontend/src/screens/: index.ts  profile-screen.tsx  user-screen.tsx  welcome-sreen.tsx
frontend/src/shared/config/: axios-instance.ts  (+1 more)
infra/: .env.example  docker-compose-prod.yml  docker-compose.yml
(+79 files in other folders)
