[tool.poetry]
name = "friendly-backend"
version = "0.1.0"
description = ""
authors = ["Сергей Коновалов <SokiZNosoK68rus@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
isort = "^6.0.1"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
databases = "^0.9.0"
psycopg2-binary = "^2.9.10"
dotenv = "^0.9.9"
pyjwt = "^2.10.1"
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.0.0"
setuptools = "^80.9.0"


[tool.poetry.group.dev.dependencies]
alembic = "^1.16.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_between_sections = 1
force_sort_within_sections = true
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
